--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -2,18 +2,19 @@
 
 /* <nav> */
 .navbar {
-  margin: auto;
+  /* margin: auto; */
   height: var(--nav-size);
-  width: 90%;
+  /* width: 90%; */
+  width: 100%;
   background: var(--nav-bg);
-  border-radius: var(--nav-size);
-  padding-left: calc(var(--nav-size) / 8);
-  padding-right: calc(var(--nav-size) / 8);
-  border-bottom: var(--border);
+  /* border-radius: var(--nav-size); */
+  /* padding-left: calc(var(--nav-size) / 8); */
+  /* padding-right: calc(var(--nav-size) / 8); */
+  border-bottom: 0.125rem solid var(--nav-bg-accent);
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 1.5rem;
+  
 }
 
 /* <ul> */
@@ -21,23 +22,27 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-  
+  padding-right: 0.5rem;
 }
 
 /* <li> */
 .nav-item {
-  height: calc(var(--nav-size) - calc(var(--nav-size) / 4));
+  height: calc(var(--nav-size) - 1.5rem);
+  /* height: calc(var(--nav-size) - calc(var(--nav-size) / 4)); */
+  margin: 0.5rem;
 }
 
 /* Icon Button */
 .icon-button {
   display:inline-flex;
   background-color: var(--nav-bg-accent);
-  border-radius: var(--nav-size);
+  /* border-radius: var(--nav-size); */
   height: 100%;
-  width: 6rem;
+  /* width: 6rem; */
+  padding-right: 1rem;
+  padding-left: 1rem;
   justify-content: center;
   align-items: center;
   color: var(--icone-color);
@@ -52,6 +57,6 @@
 .logo {
     background: transparent;
     color: var(--logo-color);
-    font-family: 'Pacifico', cursive;
+    /* font-family: 'Pacifico', cursive; */
     font-size: var(--logo-font-size);
 }
