--- a/styles/Tabs.module.css
+++ b/styles/Tabs.module.css
@@ -1,10 +1,11 @@
 .tabs {
-    margin-top: 5rem;
     margin-left: 2rem;
+    margin-top: 10% ;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    width: var(--tab-width);
+    width: 25%;
+    /* height: 70%; */
+    min-width: var(--tab-width);
     box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
     border-radius: var(--tab-border-radius);
   }
@@ -14,29 +15,24 @@
   }
   
   .tabs > input:checked + label {
-      transition: all 1s ease-out;
+      /* transition: all 0.5s ease; */
       color: var(--primary);
       box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
       border-radius: var(--tab-border-radius);
-      height: var(--inside-tab-height);
-      width: var(--inside-tab-width);
       margin: 0.25rem;
   }
   
-  .tabsone, .tabstwo, .tabsthree {
-      width: var(--tab-width);
-      height: var(--tab-height);
-      font-size: 1rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      color: var(--greyDark);
-      transition: all .5s ease;
-    /* border: solid red; */
+  .insidetabs {
+    height: var(--tab-height);
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: var(--greyDark);
   }
   
-  .tabsone:hover, .tabstwo:hover, .tabsthree:hover {
+  .insidetabs:hover {
       color: var(--primary);
   }
 /*   
