--- a/styles/Tabs.module.css
+++ b/styles/Tabs.module.css
@@ -1,3 +1,14 @@
+.grid{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.text{
+  margin: 1rem;
+  /* border: solid red; */
+}
+
 .tabs {
     margin-left: 2rem;
     margin-top: 10% ;
@@ -16,10 +27,13 @@
   
   .tabs > input:checked + label {
       /* transition: all 0.5s ease; */
-      color: var(--primary);
+      /* color: var(--primary); */
+      /* box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white); */
       box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
       border-radius: var(--tab-border-radius);
       margin: 0.25rem;
+      /* background-color: var(--nav-bg); */
+      /* background-color: transparent; */
   }
   
   .insidetabs {
@@ -29,7 +43,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    color: var(--greyDark);
+    /* color: var(--greyDark); */
   }
   
   .insidetabs:hover {
