--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -2,61 +2,12 @@
 
 /* <nav> */
 .navbar {
-  /* margin: auto; */
-  height: var(--nav-size);
-  /* width: 90%; */
-  width: 100%;
-  background: var(--nav-bg);
-  /* border-radius: var(--nav-size); */
-  /* padding-left: calc(var(--nav-size) / 8); */
-  /* padding-right: calc(var(--nav-size) / 8); */
-  border-bottom: 0.125rem solid var(--nav-bg-accent);
   display: flex;
   justify-content: center;
-  align-items: center;
-  
-}
-
-/* <ul> */
-.navbar-nav {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding-right: 0.5rem;
-}
-
-/* <li> */
-.nav-item {
-  height: calc(var(--nav-size) - 1.5rem);
-  /* height: calc(var(--nav-size) - calc(var(--nav-size) / 4)); */
-  margin: 0.5rem;
-}
-
-/* Icon Button */
-.icon-button {
-  display:inline-flex;
-  background-color: var(--nav-bg-accent);
-  /* border-radius: var(--nav-size); */
-  height: 100%;
-  /* width: 6rem; */
-  padding-right: 1rem;
-  padding-left: 1rem;
-  justify-content: center;
-  align-items: center;
-  color: var(--icone-color);
-  transition: filter 300ms;
-}
-
-
-.icon-button:hover {
-    filter: brightness(1.2);
 }
 
 .logo {
-    background: transparent;
-    color: var(--logo-color);
-    /* font-family: 'Pacifico', cursive; */
-    font-size: var(--logo-font-size);
+  padding: 1rem;
+  width: auto;
+  height: auto;
 }
