--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -1,64 +1,83 @@
 .module {
+  width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
 }
 
 .container {
+  width: clamp(100px, 70%, 600px);
   height: 44px;
 }
 
 .search {
-  height: calc(100% - 2 * 0.06125rem);
-  width: 582px;
-  background-color: var(--nav-bg);
-  border: 0.06125rem solid var(--nav-bg-accent);
+  height: calc(100% - 2px);
+  width: calc(100% - 1rem - 2px);
+  background-color: hsl(0, 0%, 90%);
+  border: 1px solid hsl(0, 0%, 80%);
   padding: 0;
   padding-left: 1rem;
-  border-radius: 22px;
+  border-radius: var(--radius);
 }
 
-.search:hover {
+/* .search:hover {
   height: calc(100% - 2 * 0.125rem);
   border: 0.125rem solid var(--nav-bg-accent);
   outline: 0;
-}
+} */
 
 .search:focus {
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+  /* border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0; */
+  height: calc(100% - 4px);
+  width: calc(100% - 1rem - 4px);
+  border: 2px solid hsl(0, 0%, 80%);
   outline: 0;
 }
 
 .results {
-  width: 100%;
-  border: none;
+  width: calc(100% - 2 * 2px);
+  border: 2px solid hsl(0, 0%, 80%);
+  /* width: 100%; */
   background-color: var(--nav-bg);
-  border-radius: 0;
-  border-bottom-right-radius: 22px;
-  border-bottom-left-radius: 22px;
-  padding-bottom: 22px;
+  border-radius: var(--radius);
+  margin-top: 1rem;
+  /* border-bottom-right-radius: 22px; */
+  /* border-bottom-left-radius: 22px; */
+  /* padding-bottom: 22px; */
   overflow: hidden;
+  z-index: 1;
+  position: relative;
 }
 
 .result {
   width: 100%;
   font-size: 0.8em;
+  height: calc(100% - 2px);
+  border-bottom: 2px solid hsl(0, 0%, 80%);
+}
+
+.result:last-child {
+  height: calc(100%);
+  border-bottom: none;
 }
 
 .link {
   display: inline-flex;
   padding: 0.5rem;
-  width: calc(100% - 1rem);
-  height: 100%;
-  background-color: var(--nav-bg-accent);
-  color: var(--icone-color);
+  width: calc(100% - 1.5rem);
+  height: calc(100% - 1rem);
+  background-color: hsl(0, 0%, 90%);
+  color: hsl(0, 0%, 10%);
   filter: brightness(1);
+  padding-left: 1rem;
 }
 
 .link:hover {
-  filter: brightness(1.2);
+  filter: brightness(0.9);
 }
 
 .hover {
-  filter: brightness(1.2);
+  filter: brightness(0.9);
 }
