--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,9 +11,9 @@
   --logo-font-size: calc(var(--nav-size) / 2); */
   /* --bg: linear-gradient(90deg, hsl(39, 96%, 48%) 0%, hsl(33, 96%, 43%) 100%); */
   /* --bg: linear-gradient(90deg, hsl(191, 64%, 40%) 0%, hsl(200, 64%, 43%) 100%); */
-  --bg: #FFFFFF;  ;
-  --white: #FFFFFF;
-  --greyLight-1: #E4EBF5;
+  --bg: #ffffff;
+  --white: #ffffff;
+  --greyLight-1: #e4ebf5;
   --greyLight-2: #c8d0e7;
   --greyLight-3: #bec8e4;
   --greyDark: #9baacf;
@@ -25,8 +25,6 @@
   --logo-color: hsl(0, 0%, 20%);
   --logo-font-size: calc(var(--nav-size) / 2);
   --footer-size: 2.5rem;
-
- 
 }
 
 body {
