--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,42 +1,44 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
 
+.container {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
 .footer {
-  position: relative;
   margin-top: 2rem;
   margin-bottom: 1rem;
-  bottom: 2%;
-  left: 15%;
-  height: var(--footer-size);
-  width: 70%;
+  height: 3rem;
+  width: clamp(300px, 70%, 800px);
   border-radius: 1.5rem;
-  background: var(--nav-bg);
+  background: var(--greyLight-0);
   display: flex;
   justify-content: space-between;
-
-  box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2),
-    inset -0.2rem -0.2rem 0.5rem var(--white);
+  box-shadow: var(--box-shadow);
   /* box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white); */
   /* box-shadow:.8rem .8rem 1.4rem var(--greyLight-1), -.2rem -.2rem 1.8rem var(--white); */
-  grid-column: 1 / 2;
-  grid-row: 5 / 6;
-  color: var(--greyDark);
-  transition: 0.3s ease;
+  padding-left: 1.5rem;
 }
 
 .icon {
-  padding: 0.45%;
+  padding-right: 1rem;
+}
+
+.iconImage {
+  height: 100%;
+  width: 2rem;
+  display: flex;
+  align-items: center;
 }
 
 .text {
-  margin: auto;
-  padding-top: 0.45%;
-  padding-left: 3%;
   /* font-family: "Raleway", sans-serif; */
-  color: black;
+  margin-right: 1.5rem;
 }
 
 .links {
-  width: 20%;
   display: flex;
-  justify-content: stretch;
+  align-items: center;
 }
