--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -1,4 +1,5 @@
 .module {
+  --radius: 10px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -40,7 +41,7 @@
   width: calc(100% - 2 * 2px);
   border: 2px solid hsl(0, 0%, 80%);
   /* width: 100%; */
-  background-color: var(--nav-bg);
+  background-color: var(greyLight-0);
   border-radius: var(--radius);
   margin-top: 1rem;
   /* border-bottom-right-radius: 22px; */
