Update search bar css + add button

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -45,6 +45,11 @@
   overflow: hidden;
 }
 
+.container:hover {
+  filter: var(--filter-hover);
+  box-shadow: var(--box-shadow-hover);
+}
+
 .icon {
   min-width: 4rem;
   max-width: 6rem;
