--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,10 @@
   /* --box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2),
     inset -0.2rem -0.2rem 0.5rem var(--white); */
   --box-shadow: hsla(240, 5%, 41%, 0.2) 0px 7px 29px 0px;
+  /* --box-shadow-hover: hsla(240, 5%, 41%, 0.2) 0px 5px 15px 0px; */
+  --box-shadow-hover: rgba(0, 0, 0, 0.16) 0px 1px 4px,
+    rgb(51, 51, 51) 0px 0px 0px 3px;
+  --filter-hover: brightness(1.1);
 }
 
 body {
