big home page + about page + remove bg

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,13 +1,10 @@
-/* Top Navigation Bar */
-
-/* <nav> */
 .navbar {
   display: flex;
   justify-content: center;
 }
 
 .logo {
-  padding: 1rem;
+  margin: 1rem;
   width: auto;
   height: auto;
 }
