--- a/styles/Create.module.css
+++ b/styles/Create.module.css
@@ -1,16 +1,17 @@
 .wrapper {
   width: 100%;
+  height: calc(100% - 6rem - 7rem);
   display: flex;
 }
 
 .container {
-  width: 50%;
+  width: calc(50% - 0.25rem);
+  height: 100%;
+  flex: 1 1 auto;
 }
 
-.container > main {
-  margin-left: 1rem;
-  margin-right: 1rem;
-  width: calc(100% - 2rem);
+.container:last-of-type {
+  width: auto;
 }
 
 .nav {
@@ -20,14 +21,42 @@
   justify-content: center;
 }
 
+.handler {
+  width: 0.5rem;
+  height: calc(100%-4rem);
+  margin-top: 4rem;
+  cursor: ew-resize;
+  flex: 0 0 auto;
+  background: hsl(0, 0%, 0%, 60%);
+}
+
 .textarea {
-  margin-left: 1rem;
+  background: var(--greyLight-0);
+  box-shadow: var(--box-shadow-hover);
   margin-right: 1rem;
+  margin-left: 1rem;
+  padding: 0.5rem;
   border: none;
   outline: none !important;
-  width: calc(100% - 2rem);
-  min-height: 50rem;
-  /* height: 100%; */
+  width: calc(100% - 3rem);
+  height: calc(100% - 5rem);
   overflow-x: hidden;
   resize: none;
+}
+
+.sheet {
+  background: var(--greyLight-0);
+  box-shadow: var(--box-shadow-hover);
+  margin-right: 1rem;
+  margin-left: 1rem;
+  padding: 0.5rem;
+  width: calc(100% - 3rem);
+  height: calc(100% - 5rem);
+  overflow-y: scroll;
+}
+
+.container > main {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  width: calc(100% - 2rem);
 }
