--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,8 +1,6 @@
 .navbar {
   min-width: 100%;
   display: flex;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 
 .borderDiv {
@@ -17,15 +15,19 @@
   min-width: 50%;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: auto;
   height: auto;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .button {
   border: none;
   cursor: pointer;
   margin-right: 2rem;
-  padding: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   background: var(--greyLight-0);
   box-shadow: var(--box-shadow);
   border-radius: 1.5rem;
