--- a/styles/Create.module.css
+++ b/styles/Create.module.css
@@ -1,5 +1,5 @@
 .nav {
-  width: 100%;
+  width: calc(100% - 1rem);
   height: 3.5rem;
   margin-bottom: 0.5rem;
   padding-left: 1rem;
@@ -9,7 +9,3 @@
   /* box-shadow: var(--box-shadow); */
 }
 
-.form {
-  height: calc(100% - 6rem - 7rem - 4rem);
-  background-color: lightblue;
-}
