--- a/styles/Publisher.module.css
+++ b/styles/Publisher.module.css
@@ -8,30 +8,41 @@
 }
 
 .headline {
-  padding-left: 5rem;
+  /* padding-left: 5rem; */
   padding-top: 3rem;
   max-width: 50rem;
   margin-bottom: 3rem;
 }
 
-.formDiv {
+/* .formDiv {
   margin-left: 5rem;
   margin-right: 5rem;
   display: flex;
   align-items: center;
   justify-content: left;
-}
+} */
 
 .form {
+  /* width: calc(100% - 10rem); */
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  /* margin-left: 5rem; */
+  /* margin-right: 5rem; */
   width: 100%;
-  display: grid;
-  gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 40vw));
-  grid-auto-rows: 7rem;
-  justify-content: space-evenly;
 }
 
-.label {
+.form1 {
+  width: 100%;
+  /* background-color: blueviolet; */
+  
+}
+.form2 {
+  width: 100%;
+  /* background-color: red; */
+
+}
+
+/* .label {
   margin-bottom: 1rem;
 }
 
@@ -46,7 +57,6 @@
   width: 20rem;
   padding: 0;
   padding-left: 1rem;
-  /* color: transparent; */
   background: var(--greyLight-0);
   box-shadow: var(--box-shadow);
   border-radius: 2rem;
@@ -63,10 +73,9 @@
 }
 
 .input:hover {
-  /* filter: var(--filter-hover); */
   box-shadow: var(--box-shadow-hover);
 }
 
 .input:focus {
   box-shadow: var(--box-shadow-hover);
-}
+} */
