--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,34 +1,92 @@
-.navbar {
-  min-width: 100%;
+.primaryHeader {
+  max-width: 1472px;
+  margin-inline: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   display: flex;
-}
-
-.borderDiv {
-  min-width: 25%;
-  height: auto;
-  display: flex;
-  justify-content: right;
   align-items: center;
+  /* justify-content: space-between; */
 }
 
 .logo {
-  min-width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: auto;
-  height: auto;
-  padding-top: 1rem;
-  margin-bottom: 1rem;
+  margin-inline: 2rem;
+  width: 3rem;
+  aspect-ratio: 1;
 }
 
-.button {
-  border: none;
-  cursor: pointer;
+.logoLink {
+  display: flex;
+  align-items: center;
+}
+
+.nav {
+  width: 100%;
   margin-right: 2rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  background: var(--greyLight-0);
-  box-shadow: var(--box-shadow);
-  border-radius: 1.5rem;
+}
+
+.primaryNavigation {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: var(--gap, 2rem);
+  align-items: center;
+}
+
+.primaryNavigation a {
+  text-decoration: none;
+}
+
+.primaryNavigation > li:last-of-type {
+  margin-left: auto;
+}
+
+.primaryNavigation a > [aria-hidden="true"] {
+  font-weight: 700;
+  margin-inline-end: 0.75rem;
+}
+
+.mobileNavToggle {
+  display: none;
+}
+
+@media (max-width: 720px) {
+  .primaryNavigation {
+    --gap: 3rem;
+
+    position: fixed;
+    inset: 0 0 0 30%;
+    z-index: 1000;
+
+    flex-direction: column;
+    /* align-items: stretch; */
+    padding: min(20vh, 10rem) 2em;
+
+    background: hsl(0, 0%, 90%, 100%);
+    box-shadow: var(--box-shadow);
+
+    transform: translateX(100%);
+    transition: transform 150ms ease-in;
+  }
+
+  .primaryNavigation[data-visible="true"] {
+    transform: translateX(0%);
+  }
+
+  .primaryNavigation > li:last-of-type {
+    margin-left: 0;
+  }
+
+  .mobileNavToggle {
+    display: block;
+    position: fixed;
+    z-index: 9999;
+    background: none;
+    border: 0;
+    cursor: pointer;
+    width: 2rem;
+    aspect-ratio: 1;
+    top: 2rem;
+    right: 2rem;
+  }
 }
