--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -11,7 +11,7 @@
   margin-top: 2rem;
   margin-bottom: 1rem;
   height: 3rem;
-  width: clamp(300px, 70%, 800px);
+  width: clamp(20rem, 70vw, 50rem);
   border-radius: 1.5rem;
   background: var(--greyLight-0);
   display: flex;
