--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -1,17 +1,21 @@
-.module {
+/* .module {
   width: 100%;
-  height: 3rem;
+  height: 2rem;
   display: flex;
   justify-content: center;
   margin-bottom: 2rem;
+} */
+
+.wrapper {
+  width: 20rem;
 }
 
 .search {
   font-family: inherit;
   height: 3rem;
-  width: 20rem;
   padding: 0;
   padding-left: 1rem;
+  width: calc(100% - 1rem);
   /* color: transparent; */
   background: var(--greyLight-0);
   box-shadow: var(--box-shadow);
@@ -31,18 +35,18 @@
 }
 
 .results {
-  width: 100%;
+  width: 20rem;
   background: var(--greyLight-0);
   box-shadow: var(--box-shadow);
   border-radius: 1.5rem;
   margin-top: 1rem;
   overflow: hidden;
   z-index: 1;
-  position: relative;
+  position: absolute;
 }
 
 .result {
-  width: 100%;
+  /* width: 100%; */
   font-size: small;
 }
 
@@ -71,5 +75,15 @@
   }
   100% {
     background-position: right;
+  }
+}
+
+@media (max-width: 1024px) {
+  .wrapper {
+    width: calc(100vw - 14rem);
+  }
+
+  .results {
+    width: calc(100vw - 14rem);
   }
 }
