--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,12 +36,6 @@
   --filter-hover: brightness(1.1);
 }
 
-html,
-body,
-#__next {
-  height: 100%;
-}
-
 body {
   padding: 0;
   margin: 0;
@@ -58,6 +52,7 @@ body {
     Noto Color Emoji;
   /* -webkit-font-smoothing: antialiased; */
   /* -moz-osx-font-smoothing: grayscale; */
+  overflow-x: hidden;
 }
 
 @keyframes background-animation {
@@ -106,4 +101,18 @@ a {
 }
 
 textarea {
+}
+
+.sr-only {
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
+  -webkit-clip-path: inset(50%) !important;
+  clip-path: inset(50%) !important; /* 2 */
+  height: 1px !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important; /* 3 */
 }
